apps/example-python-test-11/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-python-test-11
  namespace: prod
  labels:
    app: example-python-test-11
    backstage.io/kubernetes-id: example-python-test-11
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-python-test-11
  template:
    metadata:
      labels:
        app: example-python-test-11
        backstage.io/kubernetes-id: example-python-test-11
        environment: prod
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: example-python-test-11
          image: jaykumark7/example-python-test-11:1.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
