apps/example-python-test-11/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-python-test-11
  namespace: prod
  labels:
    backstage.io/kubernetes-id: example-python-test-11
    environment: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /example-python-test-11-prod(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: example-python-test-11
                port:
                  number: 80
